add style to copyright

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,5 @@
 * {background-color: black;
 text-align: center; font-family: Verdana;}
 h1 {color: white; font-size: 50px;}
-p {color:grey; font-size: }
+a {color: aquamarine; font-size: 16px;}
+p {color:grey; font-size: 21px }
