--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,7 @@
 * {background-color: black;
-text-align: center; font-family: Verdana;}
-h1 {color: white; font-size: 50px;}
-a {color: aquamarine; font-size: 16px;}
-p {color:grey; font-size: 21px }
+text-align: center; font-family: Verdana;margin-top: 20px;}
+h1 {color: white; font-size: 50px; margin-top: 30px;}
+a {color: aquamarine; font-size: 16px; margin-top: 30px; margin-bottom: : 30px;}
+p {color:grey; font-size: 21px; margin-top: 30px; margin-top: 30px; }
+img {image-orientation: center; margin-bottom: 30px;margin-top: 30px;}
+#copyright {text-align: right;}
